[project]
name = "low-quality-inizer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jackson Meyer", email = "jmeyerer18@gmail.com"},
]
dependencies = [
    "typer>=0.12.3",
    "pytube>=15.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
